# EEG-Schizophrenia

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/1-4_csv_avg/: part-00000-1d71fb55-d46d-416c-9a35-24ced7e253d0-c000.csv
data/processed/1-4_csv_sax/: part-00000-c5f64196-f409-4648-9305-fbfe3630e2a6-c000.csv
data/processed/1_csv_avg/: part-00000-10eaf3ed-ec81-4a1c-afbb-bd219593729b-c000.csv
data/processed/preprocessing_pipeline/metadata/: part-00000-818dc7e0-6b7c-4b0b-884c-40860506cf9a-c000.txt  part-00000-e6ef0452-814b-46da-9323-3da20b73212c-c000.txt  part-00000-f44c971f-9041-460a-a460-5b1ed7a110de-c000.txt
data/processed/preprocessing_pipeline/stages/0_StringIndexer_73cc53287be8/data/: part-00000-ce7e8de1-ecb1-43d2-a6a6-c03e781744ee-c000.snappy.parquet
data/processed/preprocessing_pipeline/stages/0_StringIndexer_73cc53287be8/metadata/: part-00000-501f86cf-2c96-41fb-a069-0c7dda870061-c000.txt
data/processed/preprocessing_pipeline/stages/0_StringIndexer_c32f138e1a89/metadata/: part-00000-ab64bda4-5db7-4c00-96e8-583c4bf6cbf4-c000.txt
data/results/gpt_baseline_classifier/: group_classifier.joblib  metrics.json
notebooks/: 1_data_reduction.ipynb  2_eda_final.ipynb  3_feature_engineering.ipynb  4_data_preprocessing.ipynb  5_modeling.ipynb  preprocessing.ipynb
src/: downloadData.py
src/eeg_schizophrenia/: download_data.py  train_group_classifier.py
tests/: test_download_data.py
(+17 files in other folders)
