[project]
name = "eeg-schizophrenia"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaggle>=1.8.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "nbstripout",
    "pre-commit",
]

[project.scripts]
download_eeg_schizophrenia = "eeg_schizophrenia.download_data:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
docstring-code-format = true
